--- a/index.html
+++ b/index.html
@@ -91,9 +91,20 @@
   <div class="tile red"><img src="img\tov7.jpg" width="250" height="250"><h2>KUGOO S2 (Jilong)</h2><h2>14900 руб.</h2></div>
   <div class="tile green"><img src="img\tov4.jpg" width="250" height="250"><h2>Xiaomi Ninebot Mini</h2><h2>22900 руб.</h2></div>
   <div class="tile green"><img src="img\tov5.jpg" width="250" height="250"><h2>Hili E+</h2><h2>39900 руб.</h2></div>
-</div>
-<div class="kons">
-  <h2>565757567567gkghjgrtu8thg54967</h2>
-  </div>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(85413349, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/85413349" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	</body>
 </html>
