--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE>
 <html>
 	<head>
+		<meta name="google-site-verification" content="EEHevNAmcc8S8OCfkc08Fa1UHnicvPozqA8opIZJ9i0" />
     <meta charset="UTF-8">
 	<link rel="stylesheet" href="master.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="filter.css">
 	</head>
+	<meta name="google-site-verification" content="EEHevNAmcc8S8OCfkc08Fa1UHnicvPozqA8opIZJ9i0" />
 	<body>
 		<header>
 			<div class="logo">
